Version 5.2.2   unreleased

    * Add GwtAssertions class with new method assertRpcsImplementRemoteService().

Version 5.2.1   17 Mar 2015

    * Make adjustments for transition from Google Code to BitBucket.

Version 5.2.0   17 Mar 2015

   * Bump up to AppEngine v1.9.18 just to stay up-to-date.
   * Move to Maven Central based on support in CedarBuild v0.8.14.
   * Pull in Objectify 3.1 from repackaged repository in Maven Central.

Version 5.1.0   11 Jan 2015

    * Bump up to GWT 2.7.0, AppEngine v1.9.17a, and CedarBuild v0.8.12.
    * Deprecate the GaeUserService and GaeUserRpc methods that handle federated login.
    * Implement new GaeUserService and GaeUserRpc methods to support Google Accounts logins.

Version 5.0.2   11 Nov 2014

    * Add Assertions.assertListEquals() and Assertions.assertMapEquals().

Version 5.0.1   08 Nov 2014

    * Update the README to be explicit about only supporting GWT 2.7 or better.

Version 5.0.0   08 Nov 2014

    * Change AbstractDropdownList interface to avoid conflicts with new GWT 2.7.x methods.
    * Change ListItem, OrderedList, UnorderedList to fix deprecations by using new-style Element.
    * Move up to newest version of various dependencies, since this is a major release.

Version 4.9.1   28 Oct 2014

    * Fix rendering problems with tabs if a bookmark is the first action after login.

Version 4.9.0   23 Oct 2014

    * Add new filter GwtCacheControlFilter to standardize caching for GWT files.

Version 4.8.1   26 Sep 2014

    * Upgrade to CedarBuild v0.8.10, just to stay up-to-date with latest code.
    * Be more strict about using Mockito's isA() in unit tests rather than any().

Version 4.8.0   22 Sep 2014

    * Change standard log4j date format to include time zone.
    * Bump up to AppEngine v1.9.11, since v1.8.8 is getting kind of old.

Version 4.7.0   16 Jul 2014

    * Package the RichTextToolbar from GWT's showcase.

Version 4.6.0   11 Jul 2014
